Map covering correct portion of screen.

--- a/src/components/entry/Main.css
+++ b/src/components/entry/Main.css
@@ -23,7 +23,7 @@ ul.header li a {
 
 .content {
     background-color: #FFF;
-    padding: 5px;
+    /* padding: 5px; */
 }
 
 .content h2 {
